Kapi 3.0 the final version

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" href="./logo512.png">
     <link rel="icon" type="image/png" href="./logo192.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
     <title>KapibaraLab</title>
   </head>
   <body>
